# scan_bench

./: CMakeLists.txt  benchmark.cpp  benchmark.h  common.cpp  common.h  cuda.cu  main.cpp  opencl.cpp  opencl.h  test.cpp  test.h
.cache/clangd/index/: common.cpp.8A52ABA47A52BCC6.idx  common.h.325AC2C800ABEAFB.idx  main.cpp.BF89EB04D6945EE1.idx  opencl.cpp.A5F323CFA7220148.idx  opencl.h.0CF6FF3F39A57FBA.idx  test.cpp.AEF17AF2B4C6EB4A.idx  test.h.8F12D68CDF50D6A0.idx
kernels/: kernels.cl  kernels.csv  kernels_fixed_size.cl  ocl_kernel.cl
